--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-ignore = E741, C901
+ignore = E741, E501, W503, C901, F541
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
 max-complexity = 10
